<resources>
    <string name="app_name">Khosbayar Sandag CV</string>
    <string name="linkedin">LinkedIn</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="xocoome">Xocoo.me</string>
    <string name="contact">Contact</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">About me</string>
    <string name="work">Work</string>
    <string name="copyright">Khosbayar Sandag © 2022</string>
    <string name="khosbayar_sandag">Khosbayar Sandag</string>
    <string name="devops_engineer">DevOps engineer</string>
    <string name="sorenson_communication">Sorenson</string>
    <string name="my_intro">Highly motivated DevOps and Software engineer with 5 years of hands-on experience, working on start-up and enterprise systems. Specialized in back-end development and deployment, CI/CD, Docker, Kubernetes, Linux, and AWS, and worked in the IT industry for more than 10 years.</string>
    <string name="location">Location</string>
    <string name="aws_cert">AWS Certified Developer - Associate</string>
    <string name="oci_cert">Oracle Cloud Infrastructure 2021 Architect Professional</string>
    <string name="aboutme">Khosbayar Sandag, DevOps engineer from Mongolia. I am currently studying for Masters in Computer Science at Maharishi International University. I\'m an ambitious, flexible team member who loves to learn; computer savvy. I like traveling, photography, hiking, and learning new things about technology.</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="email_required">Email address (required)</string>
    <string name="password_required">Password (required)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create new account</string>
</resources>