<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutFragment">

        <WebView
            android:id="@+id/wview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/about_me_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/customborder"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="About Me"
                    android:textAllCaps="true"
                    android:textColor="#FF5252"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/zuraas"
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_about_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@color/blue" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutme" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/education_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_me_section"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/customborder"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Education"
                    android:textAllCaps="true"
                    android:textColor="#FF5252"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_education"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@color/blue" />

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/maharishi_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="35dp"
                            android:src="@drawable/maharishi_logo" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20dp">

                            <TextView
                                android:id="@+id/title_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:text="Maharishi International University "
                                android:textAllCaps="true"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_maharishi_master"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Master of Science in Computer Science"
                                android:textStyle="italic" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/shutis_logo"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="35dp"
                            android:src="@drawable/shutis_logo" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20dp">

                            <TextView
                                android:id="@+id/tv_shutis_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:text="Mongolian University of Science and Technology"
                                android:textAllCaps="true"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_shutis_bachelor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Bachelor of Information Technology"
                                android:textStyle="italic" />
                        </LinearLayout>

                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/certificate_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/education_section"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/customborder"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_certificate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Certification"
                    android:textAllCaps="true"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_about_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@color/blue" />

                <LinearLayout
                    android:id="@+id/linear_oci_cert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/oci_cert_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/oci_cerf" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:text="@string/oci_cert"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_aws_cert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/aws_cert" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"


                        android:paddingLeft="20dp"
                        android:text="@string/aws_cert"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</ScrollView>